fix(YALB-admin-theme): fix contextual link overlap with other short components

--- a/css/admin-theme.css
+++ b/css/admin-theme.css
@@ -399,7 +399,7 @@
 // able to be interacted with - e.g. `divider`
 */
 .layout-builder-block {
-  min-height: 6rem;
+  min-height: 9rem;
 }
 
 /* increase padding around the divider when in layout-builder, to make the
